@@ -1,0 +1,2 @@
+<link rel="stylesheet" type="text/css" href=".dthumb/lightbox.css"/>
+<script type="text/javascript" src=".dthumb/lightbox.js"></script>
