@@ -5,7 +5,6 @@
 	<title><!-- $title --></title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 	<link rel="stylesheet" type="text/css" href=".dthumb/main.css"/>
-	<link rel="stylesheet" type="text/css" href=".dthumb/lightbox.css"/>
-	<script type="text/javascript" src=".dthumb/lightbox.js"></script>
+<!-- $lightbox -->
 </head>
 <body><div>
