@@ -5,8 +5,9 @@
 	<title>dthumb</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 	<link rel="stylesheet" type="text/css" href=".dthumb/main.css"/>
-	<link rel="stylesheet" type="text/css" href=".dthumb/lightbox.css"/>
-	<script type="text/javascript" src=".dthumb/lightbox.js"></script>
+<link rel="stylesheet" type="text/css" href=".dthumb/lightbox.css"/>
+<script type="text/javascript" src=".dthumb/lightbox.js"></script>
+
 </head>
 <body><div>
 <div class="image-container">
